[gd_scene load_steps=22 format=3 uid="uid://b4ftj14ld58if"]

[ext_resource type="PackedScene" uid="uid://by4khk4klqv27" path="res://Scenes/transition.tscn" id="1_88tsw"]
[ext_resource type="Script" uid="uid://c00pkg3a1dyrk" path="res://Scripts/ui.gd" id="1_p3l0n"]
[ext_resource type="Texture2D" uid="uid://bpihtnygfbdmj" path="res://Textures/Particules/flocon_neige.png" id="2_flbvo"]
[ext_resource type="PackedScene" uid="uid://diqbutm2ry0bg" path="res://Scenes/quest_menu.tscn" id="3_850rj"]
[ext_resource type="Script" uid="uid://bkh8lxp5m5u61" path="res://Scripts/aurore_boreales.gd" id="3_xbp8f"]
[ext_resource type="Texture2D" uid="uid://knm4frun7pwf" path="res://Textures/Barre-PV-Combat2.png" id="5_26lyu"]
[ext_resource type="Texture2D" uid="uid://cefopnknlth3j" path="res://Textures/BARRE-PV-Combat.png" id="6_reotg"]
[ext_resource type="PackedScene" uid="uid://cs1t5u15aehqw" path="res://Scenes/minimap.tscn" id="7_e7f4u"]
[ext_resource type="Texture2D" uid="uid://bhtfor6q6se7" path="res://Textures/COIN.png" id="7_i5pcq"]
[ext_resource type="FontFile" uid="uid://dmlr6gj2b4n2n" path="res://Font/Jersey20-Regular.ttf" id="10_d42i4"]
[ext_resource type="Script" uid="uid://dryjk0sogdq1a" path="res://Scripts/info_touches.gd" id="12_7biym"]
[ext_resource type="Texture2D" uid="uid://cmdkmflgo832d" path="res://Textures/Buttons/joypads/joybar_+.png" id="13_td3vo"]
[ext_resource type="Texture2D" uid="uid://c0wv3un8wh42k" path="res://Textures/Buttons/joypads/joybar_r.png" id="14_6d7q7"]
[ext_resource type="Texture2D" uid="uid://da8ubc6ik4rjv" path="res://Textures/Buttons/joypads/joybar_l.png" id="15_x3csd"]
[ext_resource type="Texture2D" uid="uid://c7uvncushvljk" path="res://Textures/Buttons/joypads/joybar_-.png" id="16_8jrwf"]
[ext_resource type="Texture2D" uid="uid://b1tpqldiveuik" path="res://Textures/Buttons/keyboard/keyboard_p.png" id="17_de75t"]
[ext_resource type="Script" uid="uid://cm4gesp4y5y2m" path="res://Scenes/slots_shown.gd" id="18_fcexb"]
[ext_resource type="Texture2D" uid="uid://b0svu776o5qoh" path="res://Textures/slot.png" id="18_lkjmk"]
[ext_resource type="PackedScene" uid="uid://c65ywo6ftkvtc" path="res://Scenes/player_xp.tscn" id="18_mxn78"]

[sub_resource type="Curve" id="Curve_qti3j"]
_limits = [-1.0, 1.0, 0.0, 1.0]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4wxsk"]
bg_color = Color(0.909804, 0.811765, 0.65098, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="ui" type="CanvasLayer"]
script = ExtResource("1_p3l0n")

[node name="Transition" parent="." instance=ExtResource("1_88tsw")]
z_index = 20
mouse_filter = 2

[node name="Aurore_boreales" type="CPUParticles2D" parent="."]
visible = false
position = Vector2(-48, -16)
amount = 800
lifetime = 8.0
emission_shape = 3
emission_rect_extents = Vector2(5, 64)
spread = 20.0
gravity = Vector2(100, 0)
scale_amount_min = 25.0
scale_amount_max = 50.0
color = Color(0.33, 1, 0.531, 0.392157)
script = ExtResource("3_xbp8f")

[node name="Neige" type="CPUParticles2D" parent="."]
visible = false
texture_filter = 1
position = Vector2(2784, -912)
amount = 100
texture = ExtResource("2_flbvo")
lifetime = 5.0
emission_shape = 3
emission_rect_extents = Vector2(2000, 100)
gravity = Vector2(-900, 900)
angle_min = -100.0
angle_max = 100.0
scale_amount_min = 3.0
scale_amount_max = 3.0

[node name="QuestMenu" parent="." instance=ExtResource("3_850rj")]

[node name="CPUParticles2D" type="CPUParticles2D" parent="." groups=["ui"]]
self_modulate = Color(1, 1, 1, 0.392157)
position = Vector2(1920, 48)
amount = 5
draw_order = 1
emission_shape = 3
emission_rect_extents = Vector2(256, 16)
gravity = Vector2(-100, 0)
angular_velocity_min = -100.0
angular_velocity_max = 100.0
scale_amount_min = 8.0
scale_amount_max = 12.0
hue_variation_min = -0.1
hue_variation_max = 0.1
hue_variation_curve = SubResource("Curve_qti3j")

[node name="QuestTextBar" type="RichTextLabel" parent="CPUParticles2D" groups=["ui"]]
offset_left = -1416.0
offset_top = -32.0
offset_right = -16.0
offset_bottom = 110.0
mouse_filter = 2
mouse_force_pass_scroll_events = false
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.392157)
theme_override_constants/shadow_offset_y = 0
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_outline_size = 10
theme_override_constants/line_separation = -8
theme_override_font_sizes/bold_italics_font_size = 46
theme_override_font_sizes/italics_font_size = 28
theme_override_font_sizes/mono_font_size = 46
theme_override_font_sizes/normal_font_size = 46
theme_override_font_sizes/bold_font_size = 48
bbcode_enabled = true
text = "[right]NO_QUEST"
scroll_active = false
metadata/_edit_use_anchors_ = true

[node name="Cinematic" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ColorRect" type="ColorRect" parent="Cinematic"]
layout_mode = 2
offset_right = 1920.0
offset_bottom = 64.0
color = Color(0, 0, 0, 1)

[node name="ColorRect2" type="ColorRect" parent="Cinematic"]
layout_mode = 0
offset_left = -1.0
offset_top = 1016.0
offset_right = 1919.0
offset_bottom = 1080.0
color = Color(0, 0, 0, 1)

[node name="TerminatedQuest" type="Label" parent="."]
visible = false
offset_top = -57.0
offset_right = 1920.0
offset_bottom = 1023.0
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_colors/font_outline_color = Color(0.360784, 0.188235, 0, 1)
theme_override_constants/outline_size = 20
theme_override_font_sizes/font_size = 128
text = "quete terminee"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Name" type="Label" parent="TerminatedQuest"]
layout_mode = 0
offset_top = 144.0
offset_right = 1920.0
offset_bottom = 1080.0
theme_override_colors/font_color = Color(0.960784, 0.952941, 0.984314, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 20
theme_override_font_sizes/font_size = 32
text = "nom de la quete"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Stats" type="Control" parent="." groups=["ui"]]
texture_filter = 1
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Vie" type="TextureProgressBar" parent="Stats"]
texture_filter = 1
layout_mode = 0
offset_left = 24.0
offset_top = 24.0
offset_right = 80.0
offset_bottom = 32.0
scale = Vector2(4, 4)
value = 50.0
texture_under = ExtResource("5_26lyu")
texture_progress = ExtResource("6_reotg")

[node name="Coins" type="Sprite2D" parent="Stats"]
visible = false
texture_filter = 1
position = Vector2(48, 80)
scale = Vector2(2, 2)
texture = ExtResource("7_i5pcq")

[node name="Label" type="Label" parent="Stats/Coins"]
offset_left = 12.0
offset_top = -7.0
offset_right = 52.0
offset_bottom = 8.0
theme_override_fonts/font = ExtResource("10_d42i4")
theme_override_font_sizes/font_size = 16
text = "0"

[node name="CoinsLabel" type="RichTextLabel" parent="Stats" groups=["ui"]]
layout_mode = 0
offset_left = 24.0
offset_top = 80.0
offset_right = 288.0
offset_bottom = 128.0
theme_override_font_sizes/normal_font_size = 40
bbcode_enabled = true
text = "0 [img=32x32]res://Textures/COIN.png[/img]"

[node name="PanelDate" type="Panel" parent="." groups=["ui"]]
offset_left = 1693.0
offset_top = 808.0
offset_right = 1877.0
offset_bottom = 848.0
theme_override_styles/panel = SubResource("StyleBoxFlat_4wxsk")

[node name="Heure" type="Label" parent="PanelDate"]
texture_filter = 1
layout_mode = 0
offset_left = 92.0
offset_right = 179.0
offset_bottom = 40.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 32
text = "00:00"
horizontal_alignment = 2
vertical_alignment = 1

[node name="Jour" type="Label" parent="PanelDate"]
layout_mode = 0
offset_left = 3.0
offset_right = 99.0
offset_bottom = 40.0
theme_override_font_sizes/font_size = 32
text = "JOUR 1"
vertical_alignment = 1

[node name="Minimap" parent="." groups=["ui"] instance=ExtResource("7_e7f4u")]
offset_left = 1664.0
offset_top = 824.0
offset_right = 1920.0
offset_bottom = 1080.0

[node name="InfoTouches" type="Label" parent="." groups=["ui"]]
texture_filter = 1
offset_left = 64.0
offset_top = 888.0
offset_right = 246.0
offset_bottom = 1065.0
theme_override_font_sizes/font_size = 32
text = "Quêtes
Pause
Inventaire
Carte
Encyclopédie"
script = ExtResource("12_7biym")

[node name="Pause" type="Sprite2D" parent="InfoTouches"]
texture_filter = 1
position = Vector2(-24, 54)
scale = Vector2(2, 2)
texture = ExtResource("13_td3vo")

[node name="Quest" type="Sprite2D" parent="InfoTouches"]
texture_filter = 1
position = Vector2(-24, 18)
scale = Vector2(2, 2)
texture = ExtResource("14_6d7q7")

[node name="Inventory" type="Sprite2D" parent="InfoTouches"]
texture_filter = 1
position = Vector2(-24, 89)
scale = Vector2(2, 2)
texture = ExtResource("15_x3csd")

[node name="Carte" type="Sprite2D" parent="InfoTouches"]
texture_filter = 1
position = Vector2(-24, 126)
scale = Vector2(2, 2)
texture = ExtResource("16_8jrwf")

[node name="Encyclopédie" type="Sprite2D" parent="InfoTouches"]
texture_filter = 1
position = Vector2(-24, 162)
scale = Vector2(2, 2)
texture = ExtResource("17_de75t")

[node name="XPPanel" parent="." groups=["ui"] instance=ExtResource("18_mxn78")]
position = Vector2(1693, 715)

[node name="SlotsShown" type="HBoxContainer" parent="." groups=["ui"]]
offset_left = 24.0
offset_top = 120.0
offset_right = 64.0
offset_bottom = 160.0
theme_override_constants/separation = 86
script = ExtResource("18_fcexb")

[node name="1" type="Control" parent="SlotsShown"]
layout_mode = 2

[node name="Slot1" type="Sprite2D" parent="SlotsShown/1"]
texture_filter = 1
position = Vector2(33, 41)
scale = Vector2(2, 2)
texture = ExtResource("18_lkjmk")

[node name="Creature" type="Sprite2D" parent="SlotsShown/1"]
position = Vector2(33, 41)
scale = Vector2(0.1, 0.1)

[node name="2" type="Control" parent="SlotsShown"]
layout_mode = 2

[node name="Slot1" type="Sprite2D" parent="SlotsShown/2"]
texture_filter = 1
position = Vector2(33, 41)
scale = Vector2(2, 2)
texture = ExtResource("18_lkjmk")

[node name="Creature" type="Sprite2D" parent="SlotsShown/2"]
position = Vector2(33, 41)
scale = Vector2(0.1, 0.1)

[node name="3" type="Control" parent="SlotsShown"]
layout_mode = 2

[node name="Slot1" type="Sprite2D" parent="SlotsShown/3"]
texture_filter = 1
position = Vector2(33, 41)
scale = Vector2(2, 2)
texture = ExtResource("18_lkjmk")

[node name="Creature" type="Sprite2D" parent="SlotsShown/3"]
position = Vector2(33, 41)
scale = Vector2(0.1, 0.1)
